src/test/testData/docker/DS009/Dockerfile.denied
FROM alpine:3.13
<error descr="RUN using 'sudo'
Avoid using 'RUN' with 'sudo' commands, as it can lead to unpredictable behavior.">RUN  sudo pip install --upgrade pip</error>
USER mike
